# spvm

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  OPCODE_CORE.md  OPCODE_EXT.md  README.md
.github/workflows/: cmake_linux.yml  cmake_macos.yml  cmake_windows.yml
example/: CMakeLists.txt  main.cpp
example/shaders/: simple.frag  simple.frag.spv.txt
shadertoy/: CMakeLists.txt  compiler.cpp  compiler.h  main.cpp  renderer.cpp  renderer.h  resourcelimits.cpp  settingpanel.cpp  settingpanel.h  settings.h  threadpool.h  timer.cpp  timer.h
shadertoy/assets/: wrapper.frag
shadertoy/assets/shaders/: Nt3BzM.frag  XdlSDs.frag  basic.frag  fstyD4.frag  ftdfWn.frag
src/: CMakeLists.txt  compile.cpp  compile.h  decoder.cpp  decoder.h  execute.cpp  execute.h  image.cpp  image.h  interface.cpp  interface.h  logger.cpp  logger.h  module.cpp  module.h  opcodes.inc  opstrings.h  quad.cpp  quad.h  regglsl450.inc  regspirv.inc  runtime.cpp  runtime.h  spirv.h  spvm.cpp  spvm.h  utils.h
src/ext/: GLSL.std.450.h  GLSL.std.450.inc
test/: CMakeLists.txt  main.cpp  test.cpp  test.h  test_core.cpp  test_ext.cpp  test_image.cpp
test/assets/: arithmetic_0.frag  arithmetic_0.frag.spv  arithmetic_0.frag.spv.txt  arithmetic_1.frag  arithmetic_1.frag.spv  arithmetic_1.frag.spv.txt  array.frag  array.frag.spv  array.frag.spv.txt  assert.glsl  bit.frag  bit.frag.spv  bit.frag.spv.txt  built_in.vert  built_in.vert.spv.txt  composite.frag  composite.frag.spv  composite.frag.spv.txt  control_flow.frag  control_flow.frag.spv  control_flow.frag.spv.txt  conversion.frag  conversion.frag.spv  conversion.frag.spv.txt  derivative.frag  derivative.frag.spv  derivative.frag.spv.txt  function.frag  function.frag.spv  function.frag.spv.txt  glsl.py  glsl_std_450_0.frag  glsl_std_450_0.frag.spv  glsl_std_450_0.frag.spv.txt  glsl_std_450_1.frag  glsl_std_450_1.frag.spv  glsl_std_450_1.frag.spv.txt  glsl_std_450_2.frag  glsl_std_450_2.frag.spv  glsl_std_450_2.frag.spv.txt  (+11 more)
